--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     html, body {
       margin: 0;
       padding: 0;
+      width: 100%;
       height: 100%;
       overflow: hidden;
     }
@@ -22,6 +23,7 @@
   <iframe src="https://script.google.com/macros/s/AKfycbwMRZTYyJ5AAsmwFU2I0N6TCBh-AQdxr3eSmWmktShMYekW2NN1qjtje0xzLCTTnllm/exec"></iframe>
 </body>
 </html>
+
 
 
 
