--- a/index.html
+++ b/index.html
@@ -11,18 +11,53 @@
       width: 100%;
       height: 100%;
       overflow: hidden;
+      background: #F6F7FB;
     }
-    iframe {
+
+    .iframe-container {
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      position: relative;
+    }
+
+    .iframe-container iframe {
       width: 100%;
       height: 100%;
       border: none;
+      transform-origin: top left;
+      /* Escalado inicial, se ajusta con media queries */
+      transform: scale(1);
+    }
+
+    /* Ajustes para pantallas pequeñas */
+    @media (max-width: 768px) {
+      .iframe-container iframe {
+        transform: scale(0.9);
+      }
+    }
+
+    @media (max-width: 576px) {
+      .iframe-container iframe {
+        transform: scale(0.8);
+      }
+    }
+
+    @media (max-width: 400px) {
+      .iframe-container iframe {
+        transform: scale(0.7);
+      }
     }
   </style>
 </head>
 <body>
-  <iframe src="https://script.google.com/macros/s/AKfycbwMRZTYyJ5AAsmwFU2I0N6TCBh-AQdxr3eSmWmktShMYekW2NN1qjtje0xzLCTTnllm/exec"></iframe>
+  <div class="iframe-container">
+    <iframe src="https://script.google.com/macros/s/AKfycbwMRZTYyJ5AAsmwFU2I0N6TCBh-AQdxr3eSmWmktShMYekW2NN1qjtje0xzLCTTnllm/exec"></iframe>
+  </div>
 </body>
 </html>
+
+
 
 
 
