--- a/index.html
+++ b/index.html
@@ -2,60 +2,38 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>BTCash Préstamos</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BTCash Préstamos</title>
+  <script>
+    // Redirige automáticamente al Web App de Google Apps Script
+    window.location.href = "https://script.google.com/macros/s/AKfycbwMRZTYyJ5AAsmwFU2I0N6TCBh-AQdxr3eSmWmktShMYekW2NN1qjtje0xzLCTTnllm/exec";
+  </script>
   <style>
-    html, body {
+    /* Estilo básico mientras se redirige */
+    body {
+      font-family: 'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, Arial, sans-serif;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
       margin: 0;
-      padding: 0;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      background: #F6F7FB;
+      background-color: #F6F7FB;
+      color: #171717;
+      text-align: center;
     }
-
-    .iframe-container {
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      position: relative;
-    }
-
-    .iframe-container iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-      transform-origin: top left;
-      /* Escalado inicial, se ajusta con media queries */
-      transform: scale(1);
-    }
-
-    /* Ajustes para pantallas pequeñas */
-    @media (max-width: 768px) {
-      .iframe-container iframe {
-        transform: scale(0.9);
-      }
-    }
-
-    @media (max-width: 576px) {
-      .iframe-container iframe {
-        transform: scale(0.8);
-      }
-    }
-
-    @media (max-width: 400px) {
-      .iframe-container iframe {
-        transform: scale(0.7);
-      }
+    a {
+      color: #0CABA8;
+      text-decoration: none;
+      font-weight: 600;
     }
   </style>
 </head>
 <body>
-  <div class="iframe-container">
-    <iframe src="https://script.google.com/macros/s/AKfycbwMRZTYyJ5AAsmwFU2I0N6TCBh-AQdxr3eSmWmktShMYekW2NN1qjtje0xzLCTTnllm/exec"></iframe>
-  </div>
+  <p>Redirigiendo a la aplicación de préstamos...</p>
+  <p>Si no te redirige automáticamente, <a href="https://script.google.com/macros/s/AKfycbwMRZTYyJ5AAsmwFU2I0N6TCBh-AQdxr3eSmWmktShMYekW2NN1qjtje0xzLCTTnllm/exec">hacé click acá</a>.</p>
 </body>
 </html>
+
 
 
 
