--- a/index.html
+++ b/index.html
@@ -2,37 +2,49 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BTCash Préstamos</title>
-  <script>
-    // Redirige automáticamente al Web App de Google Apps Script
-    window.location.href = "https://script.google.com/macros/s/AKfycbwMRZTYyJ5AAsmwFU2I0N6TCBh-AQdxr3eSmWmktShMYekW2NN1qjtje0xzLCTTnllm/exec";
-  </script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    /* Estilo básico mientras se redirige */
-    body {
-      font-family: 'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, Arial, sans-serif;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
+    html, body {
       margin: 0;
-      background-color: #F6F7FB;
-      color: #171717;
-      text-align: center;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      background: #F6F7FB;
     }
-    a {
-      color: #0CABA8;
-      text-decoration: none;
-      font-weight: 600;
+
+    .iframe-container {
+      width: 100%;
+      height: 100%;
+      min-width: 940px; /* ancho mínimo para mantener diseño */
+      overflow: hidden;
+      position: relative;
+    }
+
+    .iframe-container iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+      transform-origin: top left;
+      transform: scale(1);
+    }
+
+    /* Escalado solo si la pantalla es menor a 940px */
+    @media (max-width: 940px) {
+      .iframe-container iframe {
+        transform: scale(calc(100vw / 940));
+      }
     }
   </style>
 </head>
 <body>
-  <p>Redirigiendo a la aplicación de préstamos...</p>
-  <p>Si no te redirige automáticamente, <a href="https://script.google.com/macros/s/AKfycbwMRZTYyJ5AAsmwFU2I0N6TCBh-AQdxr3eSmWmktShMYekW2NN1qjtje0xzLCTTnllm/exec">hacé click acá</a>.</p>
+  <div class="iframe-container">
+    <iframe src="https://script.google.com/macros/s/AKfycbwMRZTYyJ5AAsmwFU2I0N6TCBh-AQdxr3eSmWmktShMYekW2NN1qjtje0xzLCTTnllm/exec"></iframe>
+  </div>
 </body>
 </html>
+
 
 
 
