--- a/index.html
+++ b/index.html
@@ -1,49 +1,63 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>BTCash Préstamos</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      background: #F6F7FB;
-    }
+<meta charset="UTF-8">
+<title>BTCash Préstamos</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+  html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto; /* permite scroll vertical si hace falta */
+    background: #F6F7FB;
+  }
 
+  .iframe-wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 20px 0; /* un poco de espacio arriba y abajo */
+    box-sizing: border-box;
+  }
+
+  .iframe-container {
+    width: 940px; /* ancho de referencia */
+    transform-origin: top left;
+    transform: scale(calc(100vw / 940));
+    /* Ajusta la altura automáticamente según el escalado */
+    height: calc(100vh / (100vw / 940));
+    max-height: 100%;
+    box-sizing: border-box;
+  }
+
+  .iframe-container iframe {
+    width: 940px;
+    height: 100%;
+    border: none;
+    display: block;
+  }
+
+  /* Evita escalar más de 100% en pantallas grandes */
+  @media (min-width: 940px) {
     .iframe-container {
-      width: 100%;
-      height: 100%;
-      min-width: 940px; /* ancho mínimo para mantener diseño */
-      overflow: hidden;
-      position: relative;
-    }
-
-    .iframe-container iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-      transform-origin: top left;
       transform: scale(1);
+      height: auto;
     }
-
-    /* Escalado solo si la pantalla es menor a 940px */
-    @media (max-width: 940px) {
-      .iframe-container iframe {
-        transform: scale(calc(100vw / 940));
-      }
-    }
-  </style>
+  }
+</style>
 </head>
 <body>
-  <div class="iframe-container">
-    <iframe src="https://script.google.com/macros/s/AKfycbwMRZTYyJ5AAsmwFU2I0N6TCBh-AQdxr3eSmWmktShMYekW2NN1qjtje0xzLCTTnllm/exec"></iframe>
+  <div class="iframe-wrapper">
+    <div class="iframe-container">
+      <iframe src="https://script.google.com/macros/s/AKfycbwMRZTYyJ5AAsmwFU2I0N6TCBh-AQdxr3eSmWmktShMYekW2NN1qjtje0xzLCTTnllm/exec"></iframe>
+    </div>
   </div>
 </body>
 </html>
+
+
 
 
 
