--- a/index.html
+++ b/index.html
@@ -11,26 +11,38 @@
     width: 100%;
     height: 100%;
     background: #F6F7FB;
-  }
-
-  .iframe-wrapper {
-    width: 100%;
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: flex-start;
   }
 
+  .iframe-wrapper {
+    width: 100%;
+    max-width: 940px; /* ancho de diseño máximo */
+    transform-origin: top left;
+  }
+
   .iframe-container {
     width: 100%;
-    max-width: 940px; /* Ancho máximo de diseño */
-    aspect-ratio: 940 / 1200; /* Mantener proporción de tu diseño original (ajusta la altura real) */
+    height: 0;
+    padding-top: 127.66%; /* altura proporcional: 1200px/940px * 100 */
+    position: relative;
   }
 
   .iframe-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     border: none;
+  }
+
+  /* Ajuste fino para pantallas grandes */
+  @media (min-width: 940px) {
+    .iframe-wrapper {
+      transform: scale(1);
+    }
   }
 </style>
 </head>
@@ -42,6 +54,7 @@
   </div>
 </body>
 </html>
+
 
 
 
