--- a/index.html
+++ b/index.html
@@ -1,67 +1,38 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>BTCash Préstamos</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-  html, body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    background: #F6F7FB;
-  }
-
-  .iframe-wrapper {
-    width: 100%;
-    height: 100%;
-    max-width: 940px; /* ancho máximo del diseño */
-    margin: 0 auto; /* centrar horizontalmente */
-  }
-
-  .iframe-container {
-    width: 100%;
-    height: 100%; /* ocupar todo el alto disponible */
-    position: relative;
-  }
-
-  .iframe-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: none;
-  }
-
-  /* Escalado proporcional para pantallas más chicas */
-  @media (max-width: 940px) {
-    .iframe-wrapper {
-      transform: scale(calc(100vw / 940));
-      transform-origin: top left;
-      height: calc(100vh / (100vw / 940)); /* ajustar altura del wrapper */
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BTCash Préstamos</title>
+  <script>
+    // Redirige automáticamente al Web App de Google Apps Script
+    window.location.href = "https://script.google.com/macros/s/AKfycbwMRZTYyJ5AAsmwFU2I0N6TCBh-AQdxr3eSmWmktShMYekW2NN1qjtje0xzLCTTnllm/exec";
+  </script>
+  <style>
+    /* Estilo básico mientras se redirige */
+    body {
+      font-family: 'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, Arial, sans-serif;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      background-color: #F6F7FB;
+      color: #171717;
+      text-align: center;
     }
-  }
-
-  @media (min-width: 940px) {
-    .iframe-wrapper {
-      transform: scale(1);
-      height: 100%;
+    a {
+      color: #0CABA8;
+      text-decoration: none;
+      font-weight: 600;
     }
-  }
-</style>
+  </style>
 </head>
 <body>
-  <div class="iframe-wrapper">
-    <div class="iframe-container">
-      <iframe src="https://script.google.com/macros/s/AKfycbwMRZTYyJ5AAsmwFU2I0N6TCBh-AQdxr3eSmWmktShMYekW2NN1qjtje0xzLCTTnllm/exec"></iframe>
-    </div>
-  </div>
+  <p>Redirigiendo a la aplicación de préstamos...</p>
+  <p>Si no te redirige automáticamente, <a href="https://script.google.com/macros/s/AKfycbwMRZTYyJ5AAsmwFU2I0N6TCBh-AQdxr3eSmWmktShMYekW2NN1qjtje0xzLCTTnllm/exec">hacé click acá</a>.</p>
 </body>
 </html>
-
-
 
 
 
