--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
       padding: 0;
       width: 100%;
       height: 100%;
-      overflow: auto;
+      overflow: hidden;
     }
     iframe {
       width: 100%;
-      min-height: 100vh;
+      min-width: 100%;
+      height: 100%;
       border: none;
     }
   </style>
@@ -23,6 +24,7 @@
   <iframe src="https://script.google.com/macros/s/AKfycbwMRZTYyJ5AAsmwFU2I0N6TCBh-AQdxr3eSmWmktShMYekW2NN1qjtje0xzLCTTnllm/exec"></iframe>
 </body>
 </html>
+
 
 
 
